@@ -1,3 +1,11 @@
+2015-07-15  Tatsuro MATSUOKA  <tmacchant3@yahoo.co.jp>
+
+	* src/eval.c (update_gpval_variables):  Windows variant of linux/posix
+	uname() information.  Store in variables
+	    GPVAL_MACHINE         e.g. i686, x86_64
+	    GPVAL_SYSNAME         e.g. linux, Windows
+	    GPVAL_BITS            number of bits in a pointer
+
 2015-07-14  Ethan A Merritt  <merritt@u.washington.edu>
 
 	* src/datafile.c (df_open):  Bookkeeping for matrix dimensions in plot
